fix: update security config for production CORS and public auth access